perf(container): install cargo-audit from prebuilt binary
Download cargo-audit 0.22.1 binary from GitHub releases instead of
compiling from source via cargo install. This significantly speeds up
worker container build times.

Task: bn-ba33

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -34,8 +34,12 @@ ENV RUSTUP_HOME=/usr/local/rustup \
     PATH=/usr/local/cargo/bin:$PATH
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal && \
     rustup component add rustfmt clippy && \
-    cargo install cargo-audit && \
     chmod -R a+rw $RUSTUP_HOME $CARGO_HOME
+
+# Install cargo-audit from prebuilt binary (faster than compiling from source)
+ARG CARGO_AUDIT_VERSION=0.22.1
+RUN curl -L "https://github.com/rustsec/rustsec/releases/download/cargo-audit%2Fv${CARGO_AUDIT_VERSION}/cargo-audit-x86_64-unknown-linux-gnu-v${CARGO_AUDIT_VERSION}.tgz" \
+    | tar -xzf - -C /usr/local/cargo/bin --strip-components=1 cargo-audit-x86_64-unknown-linux-gnu-v${CARGO_AUDIT_VERSION}/cargo-audit
 
 # Install rust-analyzer from prebuilt binary (faster than rustup component)
 RUN mkdir -p ~/.local/bin && \
