ci: Add BN_ALLOW_SUDO=1 for container tests
The security guard for system containerd operations now requires
explicit opt-in via BN_ALLOW_SUDO=1. Set this in CI to allow
container tests to pass. Individual tests that verify the guard
behavior explicitly remove this env var as needed.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Run tests
         run: cargo test --all-features
+        env:
+          BN_ALLOW_SUDO: "1"
 
   clippy:
     name: Clippy
