--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -104,12 +104,23 @@ jobs:
         with:
           subject-path: "${{ steps.upload-release.outputs.archive }}.*"
 
+      - name: Package bootstrap artifacts
+        run: tar -czf bootstrap.tar.gz -C infra .
+
+      - name: Upload bootstrap to release
+        if: github.event_name == 'release'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload "${{ github.event.release.tag_name }}" bootstrap.tar.gz --clobber
+
       - name: Upload artifacts (dry-run)
         if: github.event_name != 'release'
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: binnacle-x86_64-unknown-linux-gnu
-          path: "${{ steps.upload-release.outputs.archive }}.*"
+          path: |
+            ${{ steps.upload-release.outputs.archive }}.*
+            bootstrap.tar.gz
 
   publish:
     name: Publish to crates.io
